# icwmp

./: .clang-format  .cproject  .gitignore  .gitlab-ci.yml  .project  Makefile.am  README.md  backupSession.c  common.c  config.c  configure.ac  cwmp.c  cwmp_cli.c  cwmp_config.c  cwmp_du_state.c  cwmp_event.c  cwmp_http.c  cwmp_json.c  cwmp_time.c  cwmp_uci.c  cwmp_zlib.c  datamodelIface.c  datamodel_interface.c  diagnostic.c  digestauth.c  download.c  event.c  external.c  http.c  jshn.c  kcwmp.c  log.c  md5.c  netlink.c  notifications.c  notifications.c.orig  reboot.c  rpc_soap.c  sched_inform.c  session.c  (+9 more)
bulkdata/: buci.c  buci.h  bulkdata.c  bulkdata.h  bulkdata.md  common.c  common.h  config.c  config.h  http.c  http.h  log.c  log.h  report.c  report.h  times.c  times.h
config/: cwmp  cwmp_bulkdata  cwmp_stun  cwmp_twamp  cwmp_udpechoserver  cwmp_xmpp  icwmp_notifd  icwmp_stun
dm/: dmcommon.c  dmcommon.h  dmcwmp.c  dmcwmp.h  dmentry.c  dmentry.h  dmjson.c  dmjson.h  dmmem.c  dmmem.h  dmubus.c  dmubus.h  dmuci.c  dmuci.h
dm/dmtree/common/: deviceinfo.c  deviceinfo.h  managementserver.c  managementserver.h  root.c  root.h  softwaremodules.c  softwaremodules.h  times.c  times.h  upnp.c  upnp.h  voice_services.c  voice_services.h  x_inteno_se_buttons.c  x_inteno_se_dropbear.c  x_inteno_se_ice.c  x_inteno_se_ipacccfg.c  x_inteno_se_ipacccfg.h  x_inteno_se_logincfg.c  x_inteno_se_owsd.c  x_inteno_se_owsd.h  x_inteno_se_power_mgmt.c  x_inteno_syslog.c  x_inteno_syslog.h  x_iopsys_eu_buttons.c  x_iopsys_eu_buttons.h  x_iopsys_eu_dropbear.c  x_iopsys_eu_dropbear.h  x_iopsys_eu_ice.c  x_iopsys_eu_ice.h  x_iopsys_eu_igmp.c  x_iopsys_eu_ipacccfg.c  x_iopsys_eu_ipacccfg.h  x_iopsys_eu_logincfg.c  x_iopsys_eu_logincfg.h  x_iopsys_eu_owsd.c  x_iopsys_eu_owsd.h  x_iopsys_eu_power_mgmt.c  x_iopsys_eu_power_mgmt.h  (+5 more)
dm/dmtree/tr098/: deviceconfig.c  deviceconfig.h  downloaddiagnostic.c  downloaddiagnostic.h  ippingdiagnostics.c  ippingdiagnostics.h  lan_interfaces.c  lan_interfaces.h  landevice.c  landevice.h  layer_2_bridging.c  layer_2_bridging.h  layer_3_forwarding.c  layer_3_forwarding.h  uploaddiagnostic.c  uploaddiagnostic.h  wandevice.c  wandevice.h  x_inteno_se_wifi.c  x_inteno_se_wifi.h  x_iopsys_eu_wifi.c
dm/dmtree/tr181/: bridging.c  bridging.h  dhcp.c  dhcp.h  dhcpv6.c  dhcpv6.h  dns.c  dns.h  dsl.c  dsl.h  ethernet.c  ethernet.h  firewall.c  firewall.h  hosts.c  hosts.h  interfacestack.c  interfacestack.h  ip.c  ip.h  nat.c  nat.h  ppp.c  ppp.h  qos.c  qos.h  routing.c  routing.h  usb.c  usb.h  userinterface.c  userinterface.h  users.c  users.h  wan.c  wan.h  wifi.c  wifi.h
dm/dmtree/upnp/: upnp_common.c  upnp_common.h  upnp_configuration.c  upnp_configuration.h  upnp_deviceinfo.c  upnp_deviceinfo.h  upnp_monitoring.c  upnp_monitoring.h
docs/api/: tr069.md  uci.cwmp.md
gitlab-ci/: functional-api-test.sh  functional-test-genieacs.sh  functional-test-openacs.sh  functional-test.sh  install-dependencies.sh  iopsys-supervisord-unit.conf  iopsys-supervisord.conf  setup.sh  shared.sh  unit-test.sh
icwmp-notifd/: icwmp-notifd.c  ubus.c  ubus.h  uci.c  uci.h
inc/: backupSession.h  common.h  config.h  cwmp.h  cwmp_cli.h  cwmp_config.h  cwmp_du_state.h  cwmp_event.h  cwmp_http.h  cwmp_json.h  cwmp_kernel.h  cwmp_time.h  cwmp_uci.h  cwmp_zlib.h  cwmpmem.h  datamodelIface.h  datamodel_interface.h  diagnostic.h  digestauth.h  download.h  event.h  external.h  http.h  jshn.h  log.h  md5.h  netlink.h  notifications.h  reboot.h  rpc_soap.h  sched_inform.h  session.h  smmem.h  soap.h  subprocess.h  ubus.h  upload.h  xml.h
init/: icwmp_bulkdatad  icwmp_notifd  icwmp_stund  icwmp_twampd  icwmp_udpechoserverd  icwmp_xmppd  icwmpd.init
json/: device.json
schemas/ubus/: tr069.json
schemas/uci/: cwmp.json
scripts/: icwmp.sh  iwepkeygen  juci.tr069
scripts/functions/: common  conf_backup  download_launch  ipping_launch  nslookup_launch  serverselection_launch  traceroute_launch  udpecho_launch  upload_launch
stun/: config.c  config.h  log.c  log.h  stun.c  stun.h  stun.md  ubus.c  ubus.h
test/api/json/: tr069.validation.json
test/cmocka/: .gitignore  Makefile  icwmp_backup_session_unit_test.c  icwmp_cli_unit_test.c  icwmp_custom_inform_parameters_unit_test.c  icwmp_datamodel_interface_unit_test.c  icwmp_download_unit_test.c  icwmp_notifications_unit_test.c  icwmp_soap_msg_unit_test.c  icwmp_soap_msg_unit_test.h  icwmp_uci_unit_test.c  icwmp_unit_test.c  icwmp_unit_test.h  unit_test_icwmp.c
test/files/tmp/: rpc_sys.data  (+3 more)
test/openacs/: openacs_script.pl
test/script/: common.sh  test_seq.txt  verify_cmd_line.sh  verify_custom_notifications.sh  verify_download_method.sh  verify_get_method.sh  verify_set_method.sh
test/uspd/: uspd.config  uspd.init
tools/: convertor_json_to_c.py  generate_xml.sh  generate_xml_16585.sh  generate_xml_bbf.sh  generator_c.py  generator_json.py  generator_json_with_backend.py
twamp/: twamp.c  twamp.h  twamp.md  twamplog.c  twamplog.h  twamptimestamp.c  twampuci.c  twampuci.h
uci-defaults/: 91-cwmp-factory-to-user
udpechoserver/: udpechoserver.c  udpechoserver.h  udpechoserver.md  udpechoserverlog.c  udpechoserverlog.h  udpechoserveruci.c  udpechoserveruci.h
xmpp/: xmpp.c  xmpp.h  xmpp.md  xmppcmd.c  xmppcmd.h  xmppconfig.c  xmppconfig.h  xmpplog.c  xmpplog.h  xmppuci.c  xmppuci.h
(+22 files in other folders)
